--- a/css/style.css
+++ b/css/style.css
@@ -3,3 +3,369 @@ body{
     padding: 0;
     font-family: 'Source Sans Pro', sans-serif;
 }
+/* header-logo-style-start */
+.header-logo{
+    background-color: black;
+    color: white;
+}
+.header-logo h1{
+    text-align: center;
+    font-size: 3rem;
+    padding: 20px 0px;
+    margin: 0;
+}
+/* header-logo-style-End */
+
+/* header-nav-style-start */
+.header-nav{
+    display: grid;
+    grid-template-columns:  20% 60% 20%;
+    background-color: black;
+    color: white;
+}
+.header-logo-img img{
+    margin-left: 15px;
+    margin-top: 5px;
+}
+.nav-list{
+    list-style: none;
+    display: flex;  
+}
+.nav-item{
+    font-size: 1rem;
+    margin-left: 27px;
+    border-bottom: 2px solid black;
+    padding-bottom: 11px;
+    cursor: pointer;
+}
+.nav-item:hover{
+    border-bottom: 2px solid white;
+    transition: 0.5s ease-in;
+}
+.icon{
+    float: right;
+    margin-right: 40px;
+}
+/* header-nav-style-End */
+
+/* header-taxt-style-start */
+.header-text-section{
+    background-color: #f1f1f1;
+    padding-bottom: 50px;
+}
+.header-text{
+    width: 70%;
+    margin: 0 auto;
+    padding-top: 20px;
+}
+
+.header-text-h3:hover{
+    color: rgb(163, 10, 10);
+    transition: 0.5s ease-in;
+}
+.header-text-p{
+    font-weight: bold;
+    color: gray;
+    letter-spacing: 0.8px;
+}
+.header-text-h1{
+    font-family: 'PTSerifRegular', Helvetica, Arial, sans-serif;
+    font-size: 2.4rem;
+}
+.header-text-span{
+    font-weight: bold;
+    font-size: 1.2rem;
+}
+.header-text-h4{
+    font-size: 1.2rem;
+    margin-top: 8px;
+}
+.h4-text-span{
+    margin-left: 12px;
+    color: #5d5a5a;
+}
+.header-text-p2{
+    font-size: 1.2rem;
+    letter-spacing: .5px;
+    line-height: 27px;
+    font-weight: 500;
+}
+.header-text-small{
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+}
+.contacts-btn{
+    margin: 60px 38%;
+}
+.show-btn{
+    color: #faffff;
+    background-color: #ae2624;
+    border: none;
+    padding: 15px 54px;
+    font-size: 1rem;
+    font-weight: 600;
+    letter-spacing: 0.8px;
+    border-radius: 10px;;
+}
+.contact-icon{
+    margin-left: 5px;
+}
+/* header-taxt-style-End */
+/* Best Skateboards-style-start */
+.section{
+    padding-bottom: 80px;
+}
+.section-title{
+    font-size: 2.5rem;
+    margin-left: 60px;
+    font-weight: bold;
+    letter-spacing: 0.6px;
+}
+.best-skatebots-box{
+    border: 2px solid #ae2624;
+    padding: 9px 85px;
+    border-radius: 10px;
+    position: relative;
+}
+.best-skatebots-box h1{
+    font-size: 2.25rem;
+    padding-bottom: 30px;
+}
+.best-skatebots{
+    display: grid;
+    grid-template-columns: 50% 50%;
+
+}
+.sktebots-img{
+    width: 100%;
+}
+.sktebots-img img{
+    width: 100%;
+}
+.img-des{
+    margin-left: 135px;
+}
+.sktebots-title{
+    margin-top: 37px;
+    font-size: 2rem;
+    font-weight: 900;
+}
+.sktebots-info{
+    font-size: 1.2rem;
+    font-weight: 500;
+    line-height: 26px;
+}
+.skatebost-details{
+    font-size: 1.3rem;
+    letter-spacing: 0.5px;
+    padding-bottom: 30px;
+}
+.skateboast-inside-box{
+    display: grid;
+    grid-template-columns:  50% 50%;
+    grid-column-gap: 20px;
+}
+.box-number{
+    height: 85px;
+    background: #ae2624;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 110px;
+    clip-path: polygon(0 0, 0% 100%, 100% 0);
+}
+.number{
+    font-size: 2rem;
+    font-family: "IndustryBold", Helvetica, Arial, sans-serif;
+    font-weight: bold;
+    font-style: normal;
+    color: #FFFFFF;
+    margin-left: 18px;
+}
+.skateboast-inside-box1{
+    border: 2px dashed #5b5a5a;
+    padding: 0px 43px 18px 28px
+}
+.skateboast-inside-box1 h1{
+    margin-top: 15px;
+    text-align: center;
+    padding: 0;
+}
+.box1-list{
+    display:inline-grid;
+}
+.list-box1{
+    padding: 5px 0px;
+    font-size: 1.2rem;
+}
+.skateboast-inside-box2{
+    border: 2px dashed #5b5a5a;
+    padding: 0px 43px 18px 28px
+}
+.skateboast-inside-box2 h1{
+    margin-top: 15px;
+    text-align: center;
+    padding: 0;
+}
+.box-icon{
+    font-size: 5px;
+    color: #35cc62;
+    margin-right: 5px;
+    transform: translateY(-4px);
+}
+#box1-icon{
+    color: red;
+}
+.cheakon-btn{
+    margin: 42px 35%;
+}
+.chkon-btn{
+    background-color: rgba(255, 198, 48, 1);
+    padding: 12px 35px;
+    color: black;
+    border: none;
+    font-size: 1rem;
+    font-weight: 600;
+    border-radius: 8px;
+}
+/* Best Skateboards-style-End */
+
+/* last-content--style-start */
+.last-content-div{
+    padding-bottom: 60px;
+}
+.last-content-h1{
+    font-size: 2.2rem;
+    font-weight: bold;
+    color: black;
+}
+.last-content-p{
+    font-size: 1.3rem;
+}
+.last-content-h3{
+    font-size: 1.3rem;
+    color: #262626;
+}
+
+/* last-content--style-End */
+
+/* FAQ- section--style-start */
+.faq-section{
+    padding-bottom: 60px;
+}
+.faq-h1{
+    font-size: 2.2rem;
+    font-weight: bold;
+    letter-spacing: 0.8px;
+}
+.faq-box{
+    display: flex;
+    justify-content: space-between;
+    box-shadow: 0px 0px 2px #9d9a9a;
+    padding: 4px 28px;
+    border-radius: 8px;
+    margin-bottom: 20px;
+}
+.faq-icon{
+    margin-top: 25px;
+}
+/* FAQ- section--style-End */
+
+/* testomonial-part- section--style-start */
+.testimoinal-section{
+    padding-bottom: 100px;
+}
+.testomonial-part{
+    box-shadow: 0px 0px 5px #b4b3b3;
+    padding: 14px 12px;
+    position: relative;
+    border-bottom: 3px solid #ae2624;
+}
+.testimonial-img{
+    position: absolute;
+    left: 46%;
+    top: -55px;
+}
+.testimonial-img img{
+    border-radius: 7px;
+}
+.testimonial-img h4{
+    font-size: 1.2rem;
+}
+.img-info{
+    padding: 88px 25px 5px 25px;
+    font-size: 1rem;
+    letter-spacing: 0.6px;
+    line-height: 26px;
+}
+/* testomonial-part- section--style-End */
+
+/* related-reviews- section--style-start */
+.related-reviews{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-column-gap: 20px;
+}
+.related-reviews-img{
+    width: 100%;
+    position: relative;
+}
+.related-reviews-img img{
+    width: 100%;
+    border-radius: 7px;
+    position: relative;
+}
+.img-text{
+    position: absolute;
+    top: 88px;
+    left: 12px;
+    background: white;
+    right: 12px;
+    padding: 0px 11px;
+    border-radius: 7px;
+}
+/* related-reviews- section--style-End */
+/*footer- section--style-start */
+footer{
+    border-top: 3px solid black;
+    padding: 25px 0px;
+}
+.footer{
+    display: grid;
+    grid-template-columns: 30% 70%;
+}
+.footer-h1{
+    font-weight: 400;
+    color: #371529;
+}
+.footer-span{
+    font-weight: 900;
+}
+.footer-h1-text{
+    float: right;
+    font-size: 3rem;
+    color: brown;
+    font-weight: bold;
+}
+.footer-list{
+    float: right;
+    display: flex;
+    margin: 0px;
+    list-style: none;
+}
+.footer-list li{
+    padding: 0px 3px;
+    margin-left: 10px;
+    font-size: 1.1rem;
+}
+.footer-p{
+    float: right;
+    font-size: 1.1rem;
+    font-weight: bold;
+    color: #5e65a1;
+}
+#footer-p{
+    margin-top: -8px;
+}
+/*footer- section--style-End */
